Issue #10795 - Fix delete align, Fix title align, Fix delete button disappeared, Fix returning page after deletion

--- a/openscholar/modules/os_features/os_reader/os_reader.css
+++ b/openscholar/modules/os_features/os_reader/os_reader.css
@@ -99,3 +99,15 @@
 .os-reader-feed-items li {
   list-style-type: none;
 }
+
+.page-cp-os-importer-news-manage ul.importer-list li {
+   display: flex;
+}
+.page-cp-os-importer-news-manage .importer-title {
+   float: left;
+   width: 70%;
+}
+.page-cp-os-importer-news-manage .importer-delete {
+   float: right;
+   width: 30%;
+}
